@@ -11,6 +11,9 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 ***********************************************************************/
 #include <vector>
+#ifdef HAVE_SSTREAM
+#include <sstream>
+#endif
 #include <openbabel/base.h>
 
 namespace OpenBabel
