@@ -27,6 +27,9 @@ GNU General Public License for more details.
 #include <openbabel/dlhandler.h>
 using namespace std;
 
+// needed for msvc to have at least one reference to AtomClass, AliasData in openbabel library
+#include <openbabel/atomclass.h>
+#include <openbabel/alias.h>
 
 
 bool DLHandler::getConvDirectory(string& convPath)
